--- a/views/page-home.pug
+++ b/views/page-home.pug
@@ -15,9 +15,7 @@ block content
 					span#player-count
 					|	players online now
 	.private-callout(style="text-align:center;margin-top:5px")
-		p(style="color:white;") Due to recurring high-traffic, we offer a temporary server intended for private games with friends.
-		p(style="color:white;") Enter #[a(href="https://private.secrethitler.io") here]!
-		p(style="color:white;") Note: This server is unmoderated, and does not support email, Discord, or GitHub sign-up features.
+		p(style="color:white;") This is a private Secret Hitler instance.
 	.ui.segment
 		.ui.grid.mainpage
 			.row.stackable#general-info
@@ -29,6 +27,3 @@ block content
 				.eight.wide.column.news
 					h2(style="color: #000").ui.header News
 					p Issues/bugs can be reported in the #[a(href="https://discord.gg/secrethitlerio") discord development channel], or by opening a #[a(href="https://github.com/cozuya/secret-hitler/issues") github issue].
-					h3 Happy New Year and Welcome to Season 13!
-					h3 Version 1.7.3 released 1-2-2021
-					p #[a(href="/observe/#/changelog") Check out the changes!]
