--- a/views/layout.pug
+++ b/views/layout.pug
@@ -19,20 +19,19 @@ html(lang="en")
       else
         link(rel="stylesheet", type="text/css", href="/styles/style-web.css")
     link(href="//fonts.googleapis.com/css?family=Comfortaa|Cuprum:400i|Germania+One|Roboto+Slab|Merriweather", rel="stylesheet", type="text/css")
-    link(rel="author", href="humans.txt")
     link(rel="icon", type="image/png", sizes="32x32", href="/favicon-32x32.png")
     link(rel="icon", type="image/png", sizes="16x16", href="/favicon-16x16.png")
     link(rel="apple-touch-icon", sizes="180x180", href="/apple-touch-icon.png")
     link(rel="mask-icon", href="/safari-pinned-tab.svg", color="#aaa")
     link(rel="manifest", href="/manifest.json")
-    meta(itemprop="name" content="Secret Hitler.io")
+    meta(itemprop="name" content="Secret Hitler")
     meta(itemprop="description" content="A web adaptation of the social deduction board game Secret Hitler.  Always free and no ads.")
-    meta(property="og:url" content="https://secrethitler.io")
+    meta(property="og:url" content="https://sh.nitro.wingless.co.uk")
     meta(property="og:type" content="website")
-    meta(property="og:title" content="Secret Hitler.io")
+    meta(property="og:title" content="Secret Hitler")
     meta(property="og:description" content="A web adaptation of the social deduction board game Secret Hitler.  Always free and no ads.")
     meta(name="twitter:card" content="summary_large_image")
-    meta(name="twitter:title" content="Secret Hitler.io")
+    meta(name="twitter:title" content="Secret Hitler")
     meta(name="twitter:description" content="A web adaptation of the social deduction board game Secret Hitler.  Always free and no ads.")
     title Secret Hitler.io
   body
@@ -66,21 +65,6 @@ html(lang="en")
         a.active.item Stats
       else
         a.item(href="/stats") Stats
-
-      if wiki
-        a.active.item Wiki
-      else
-        a.item(href="https://github.com/cozuya/secret-hitler/wiki") Wiki
-
-      if discord
-        a.active.item Discord
-      else
-        a.item(href="https://discord.gg/secrethitlerio") Discord
-
-      if github
-        a.active.item GitHub
-      else
-        a.item(href="https://github.com/cozuya/secret-hitler") GitHub
 
       if tou
         a.active.item Terms of Use
@@ -121,21 +105,6 @@ html(lang="en")
             a.active.item Stats
           else
             a.item(href="/stats") Stats
-
-          if wiki
-            a.active.item Wiki
-          else
-            a.item(href="https://github.com/cozuya/secret-hitler/wiki") Wiki
-
-          if discord
-            a.active.item Discord
-          else
-            a.item(href="https://discord.gg/secrethitlerio") Discord
-
-          if github
-            a.active.item GitHub
-          else
-            a.item(href="https://github.com/cozuya/secret-hitler") GitHub
 
           if tou
             a.active.item Terms of Use
@@ -300,5 +269,4 @@ html(lang="en")
     script(src="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js")
     script(src="//cdnjs.cloudflare.com/ajax/libs/chartist/0.11.0/chartist.min.js")
     script(src="/scripts/site.js")
-    script(async defer data-domain="secrethitler.io" src="https://plausible.vigneshjoglekar.com/js/plausible.js")
   block footer
