--- a/views/page-about.pug
+++ b/views/page-about.pug
@@ -2,11 +2,7 @@ extends layout
 block content
 	.ui.container.about-container(style="position: relative")
 		.ui.text.container
-			a(href="https://github.com/cozuya/secret-hitler")
-				img(style="position: absolute; top: 0px; left: 0; border: 0;", src="https://camo.githubusercontent.com/82b228a3648bf44fc1163ef44c62fcc60081495e/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f6c6566745f7265645f6161303030302e706e67", alt="Fork me on GitHub", data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_left_red_aa0000.png")
-			h1.ui.centered.header About Secret Hitler IO
-			p Need support or have questions about moderation? Please use the #mod-support channel of our #[a(href="https://discord.gg/secrethitlerio") Discord.] Questions about the site or code? Use the #development-contribution channel.  You can contact the admin at chris.v.ozols at gmail dot com.
-			p Want to contribute to this open source product?  Check out the github page and issues - any accepted pull request will get you a cool special colored name!
+			h1.ui.centered.header About Secret Hitler
 			p Application designed and developed from the board game by #[a(href="https://www.TwoLongOs.com") Chris Ozols], with continuing admin and development support by #[a(href="https://vigneshjoglekar.com/?utm_medium=plug&utm_source=sh.io") Vignesh Joglekar].  Source code available at #[a(href="//github.com/cozuya/secret-hitler") github].  Bugs/issues?  Use our discord, or #[a(href="https://github.com/cozuya/secret-hitler/issues") open a github issue].
 			p Important note: this site and code is not an official version or associated with the original creators of the board game, but is provided under the game's selected license here.
 			h3.ui.header Privacy Policy - general
