--- a/views/page-home.pug
+++ b/views/page-home.pug
@@ -22,8 +22,7 @@ block content
 				.eight.wide.column
 					h1(style="font-size: 22px;") Play the hit board game in your browser! Always free and no ads.
 					p Secret Hitler is a dramatic game of political intrigue and betrayal set in 1930's Germany. Players are secretly divided into two teams - liberals and fascists. Known only to each other, the fascists coordinate to sow distrust and install their cold-blooded leader. The liberals must find and stop the Secret Hitler before it is too late.
-					p Check out our #[a(href="https://github.com/cozuya/secret-hitler/wiki") wiki page] to learn about the game, or hop into the #[a(href="/observe") the game lobby] itself right now.
-					h2 #[a(href="https://discord.gg/secrethitlerio", style=("font-size: 22px;color: #c36563; text-decoration: underline")) Join our community on discord].
+					p To observe a game, hop into the #[a(href="/observe") the game lobby].
 				.eight.wide.column.news
 					h2(style="color: #000").ui.header News
-					p Issues/bugs can be reported in the #[a(href="https://discord.gg/secrethitlerio") discord development channel], or by opening a #[a(href="https://github.com/cozuya/secret-hitler/issues") github issue].
+					p Nothing newsworthy.
